Bug fixes, testing new colors, added account page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,8 +16,8 @@
 
     <div class="break break--half"></div>
     <div class="btn-group">
-      <a href="/tour" class="btn btn--primary">Learn more</a>
-      <a href="/contribute" class="btn btn--border">Contribute</a>
+      <a href="/early-access" class="btn btn--primary">Give me access</a>
+      <a href="/tour" class="btn btn--border">Tell me more</a>
     </div>
 
     <p><small>
