--- a/static/css/main.css
+++ b/static/css/main.css
@@ -268,7 +268,7 @@ img {
   width: 50%; }
 
 a {
-  color: #8728CC; }
+  color: #BA1D1D; }
   a:hover {
     color: #000; }
   a:active {
@@ -307,7 +307,7 @@ a {
 
 .stretch-img {
   width: 100%;
-  height: 100%; }
+  height: auto; }
 
 .no-bullet {
   list-style: none;
@@ -315,11 +315,14 @@ a {
   margin: 0;
   padding: 0; }
 
+.horizontal-list li {
+  display: inline-block; }
+
 .bold {
   color: #000; }
 
 .highlighted {
-  color: #8728CC; }
+  color: #BA1D1D; }
 
 .center {
   text-align: center; }
@@ -348,7 +351,7 @@ a {
   position: fixed;
   left: 1rem;
   bottom: 0;
-  z-index: 5; }
+  z-index: 6; }
 
 .snackbar {
   background-color: #424242;
@@ -374,7 +377,7 @@ a {
       font-weight: bold;
       padding: 1rem;
       float: right;
-      color: #8728CC;
+      color: #BA1D1D;
       position: relative;
       top: 0.15rem; }
 
@@ -453,13 +456,13 @@ a {
   .btn--rough {
     border-radius: 0; }
   .btn--primary {
-    background: #8728CC;
+    background: #BA1D1D;
     color: #fff; }
     .btn--primary:hover {
       background: #000;
       color: white; }
   .btn--secondary {
-    background: #2861CC;
+    background: #E55619;
     color: #fff; }
     .btn--secondary:hover {
       background: #000;
@@ -469,7 +472,7 @@ a {
     color: #000; }
     .btn--border:hover {
       border-color: currentColor;
-      color: #8728CC; }
+      color: #BA1D1D; }
 
 .card {
   margin: 0 0.4rem;
@@ -487,23 +490,23 @@ a {
     text-align: center; }
 
 .card--primary {
-  border-color: #8728CC;
+  border-color: #BA1D1D;
   transform: scale(1.125); }
   .card--primary .card__header {
-    background: #8728CC;
+    background: #BA1D1D;
     color: #fff;
-    border-bottom-color: #8728CC; }
+    border-bottom-color: #BA1D1D; }
 
 @media (max-width: 768px) {
   .card--primary {
     transform: none; } }
 
 .card--secondary {
-  border-color: #2861CC; }
+  border-color: #E55619; }
   .card--secondary .card__header {
-    background: #2861CC;
+    background: #E55619;
     color: #fff;
-    border-bottom-color: #2861CC; }
+    border-bottom-color: #E55619; }
 
 /**
  * Navigation
@@ -511,7 +514,7 @@ a {
 .nav-bar {
   position: absolute;
   width: 100%;
-  z-index: 2; }
+  z-index: 3; }
   .nav-bar a {
     color: #000; }
   .nav-bar svg path {
@@ -521,6 +524,7 @@ a {
   .nav-bar--light svg path {
     fill: #fff; }
   .nav-bar__logo img {
+    margin: 0 1rem;
     margin-right: 2rem;
     height: 0.75rem;
     width: auto;
@@ -549,7 +553,7 @@ a {
     transform: scale(1.4);
     position: relative;
     top: 0.125rem;
-    margin-right: 2rem; }
+    margin-right: 1rem; }
     .nav-bar__icon--open {
       display: block; }
     .nav-bar__icon--close {
@@ -559,7 +563,7 @@ a {
   .nav-bar.nav-bar--active-on-mobile {
     position: fixed; }
     .nav-bar.nav-bar--active-on-mobile .nav-bar__icon, .nav-bar.nav-bar--active-on-mobile .nav-bar__logo {
-      z-index: 4; }
+      z-index: 5; }
     .nav-bar.nav-bar--active-on-mobile .nav-bar__icon path {
       fill: #fff; }
     .nav-bar.nav-bar--active-on-mobile .nav-bar__logo img {
@@ -578,8 +582,8 @@ a {
       left: 0;
       height: 100%;
       width: 100%;
-      background: #8728CC;
-      z-index: 3; }
+      background: #BA1D1D;
+      z-index: 4; }
       .nav-bar.nav-bar--active-on-mobile .nav-bar__list li a {
         color: #fff; }
       .nav-bar.nav-bar--active-on-mobile .nav-bar__list li {
@@ -592,7 +596,8 @@ a {
   position: sticky;
   top: 0;
   background: #fff;
-  border-bottom: 0.08rem solid #dedede; }
+  border-bottom: 0.08rem solid #dedede;
+  z-index: 2; }
 
 .header-cover {
   height: 3.45rem;
@@ -613,11 +618,11 @@ a {
 .brand-section {
   padding: 6rem 0;
   color: #fff;
-  background: #8728CC; }
+  background: #BA1D1D; }
 
 .footer-promo {
   padding: 4rem 1rem;
-  background: #8728CC;
+  background: #BA1D1D;
   color: #fff; }
   .footer-promo .btn--primary {
     background: #fff;
@@ -632,7 +637,7 @@ a {
   .footer a {
     color: #ccc; }
     .footer a:hover {
-      color: #8728CC; }
+      color: #BA1D1D; }
   .footer .sponsor {
     height: 2rem;
     width: auto;
@@ -754,26 +759,26 @@ a {
       width: auto; }
   .comparision-table .feature {
     padding: 0.8rem;
-    border-right-color: #8728CC; }
+    border-right-color: #BA1D1D; }
     .comparision-table .feature--last {
       border-bottom: 0; }
   .comparision-table td {
     border-bottom: 0.1rem solid #dedede;
     border-top: 0.1rem solid #dedede; }
   .comparision-table td.chorale {
-    border-color: #8728CC;
-    border-left: 0.1rem solid #8728CC;
-    border-right: 0.1rem solid #8728CC;
+    border-color: #BA1D1D;
+    border-left: 0.1rem solid #BA1D1D;
+    border-right: 0.1rem solid #BA1D1D;
     padding: 1rem 2.5rem; }
     .comparision-table td.chorale svg path {
-      fill: #8728CC; }
+      fill: #BA1D1D; }
   .comparision-table th.chorale {
-    border-left: 0.1rem solid #8728CC;
-    border-right: 0.1rem solid #8728CC;
-    border-top-color: #8728CC;
-    background: #8728CC; }
+    border-left: 0.1rem solid #BA1D1D;
+    border-right: 0.1rem solid #BA1D1D;
+    border-top-color: #BA1D1D;
+    background: #BA1D1D; }
     .comparision-table th.chorale.last {
-      border-bottom: 0.1rem solid #8728CC; }
+      border-bottom: 0.1rem solid #BA1D1D; }
 
 .article {
   color: inherit;
