--- a/src/scss/components/dropins.scss
+++ b/src/scss/components/dropins.scss
@@ -32,7 +32,7 @@
 
 .stretch-img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 // Reset
@@ -41,6 +41,10 @@
   display: inline-block;
   margin: 0;
   padding: 0;
+}
+
+.horizontal-list li {
+  display: inline-block;
 }
 
 // Text
