--- a/layouts/partials/nav-light.html
+++ b/layouts/partials/nav-light.html
@@ -1,25 +1,51 @@
 <nav class="nav-bar nav-bar--light">
   <div class="container">
-    <svg class="nav-bar__icon" viewBox="0 0 24 24">
-      <path class="nav-bar__icon--open" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
-      <path class="nav-bar__icon--close" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" />
-    </svg>
-
-    <a href="/#" class="nav-bar__logo">
-      <img src="/logo.png">
-    </a>
-
     <ul class="nav-bar__list">
-      <li><a href="/tour">Features</a></li>
-      <li><a href="/pricing">Pricing</a></li>
-      <li><a href="/creators">Creators</a></li>
-      <li><a href="/blog">News</a></li>
-      <li><a href="/contribute">Contribute</a></li>
-      <!-- li><a href="/account">Login
+      <li class="nav-bar__logo">
+        <a href="/#">
+          <img src="/logo.png">
+        </a>
+      </li>
+
+      {{ partial "nav-items.html" . }}
+
+      <li class="nav-bar__cta"><a href="/early-access"><mark>Try Chorale</mark>
         <svg viewBox="0 0 24 24">
-          <path fill="#fff" d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+          <path d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
         </svg>
-      </a></li -->
+      </a></li>
     </ul>
+  </div>
+</nav>
+
+
+<nav class="nav-mobile nav-mobile--light">
+  <a href="/#" class="nav-mobile__logo">
+    <svg viewBox="0 0 96 96"><g><rect x="23.6" y="14.3" width="10.5" height="67.4"></rect><rect x="42.8" y="6.8" width="10.5" height="82.4"></rect><rect x="61.9" y="24.8" width="10.5" height="46.4"></rect><rect x="81.2" y="32.3" width="10.5" height="31.5"></rect><rect x="4.3" y="32.3" width="10.5" height="31.5"></rect></g></svg>
+  </a>
+
+  <svg class="nav-mobile__menu" viewBox="0 0 24 24">
+    <path class="nav-mobile__menu--open" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+    <path class="nav-mobile__menu--close" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" />
+  </svg>
+
+  <div class="nav-mobile__list">
+    <div class="container center">
+      <ul class="no-bullet">
+        {{ partial "nav-items.html" . }}
+      </ul>
+
+      <div class="break"></div>
+
+      <p>
+        <a href="/early-access">
+          <mark class="h4 caps"><b>Try Chorale
+            <svg viewBox="0 0 24 24" class="nav-mobile__list-icon">
+              <path d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
+            </svg>
+          </b></mark>
+        </a>
+      </p>
+    </div>
   </div>
 </nav>
