--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,14 +1,22 @@
-<a href="{{ .Permalink }}" class="article row">
-  <div class="col background" style="background-image: url({{ .Params.image }})"></div>
-  <!-- Meta -->
-  <div class="col article__details">
-    <h1 class="h2 bold"><b>{{ .Title }}</b></h1>
-    <h2 class="h4 no-upper-margin">{{ .Description }}</h2>
-    <div class="break break--half"></div>
-    <img src="https://image.crisp.chat/avatar/operator/cadc4207-3c89-4033-a436-8670701b7839/80/?avatar=https%3A%2F%2Fstorage.crisp.chat%2Fusers%2Favatar%2Foperator%2Fcadc4207-3c89-4033-a436-8670701b7839%2Fb7361758-4256-46cf-90f4-435af9c066b0.jpg" style="border-radius: 50%; width: 3rem; height: 3rem; float: left; margin-right: 1rem">
-    <span class="bold">Mantas</span><br>
-    <span class="faded">{{ .Date.Format "Jan 2, 2006" }}</span>
+<article class="article">
+  <img src="https://image.crisp.chat/avatar/operator/cadc4207-3c89-4033-a436-8670701b7839/80/?avatar=https%3A%2F%2Fstorage.crisp.chat%2Fusers%2Favatar%2Foperator%2Fcadc4207-3c89-4033-a436-8670701b7839%2Fb7361758-4256-46cf-90f4-435af9c066b0.jpg" class="article__author">
+
+  <img src="{{ .Params.image }}" class="article__image">
+
+  <div class="article__details">
+    <a href="{{ .Permalink }}"></a>
+    <h1 class="h2 center"><b>
+      <a href="{{ .Permalink }}" class="silent">{{ .Title }}</a>
+    </b></h1>
+    <p class="center ingrained">a {{ .ReadingTime }} min read by Mantas Vilčinskas on {{ .Date.Format "Jan 2, 2006" }}</p>
+
+    <p>{{ .Params.description }}</p>
+
+    <a href="{{ .Permalink }}" class="highlighted">Read more
+      <svg viewBox="0 0 24 24">
+        <path d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
+      </svg>
+    </a>
   </div>
-  <!-- End -->
-</a>
+</article>
 <div class="break"></div>
